--- a/.github/workflows/docker-image-ci.yml
+++ b/.github/workflows/docker-image-ci.yml
@@ -22,29 +22,34 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      # https://github.com/docker/login-action
+#       # https://github.com/docker/login-action
+#       - id: 'auth'
+#         if: github.event_name != 'pull_request'
+#         name: 'Authenticate to Google Cloud'
+#         uses: 'google-github-actions/auth@v0'
+#         with:
+#           token_format: 'access_token'
+#           workload_identity_provider: 'projects/97291604265/locations/global/workloadIdentityPools/gh-pool/providers/gh-provider'
+#           service_account: 'gh-runner@dapper-flow.iam.gserviceaccount.com'
+          
+#       - name: Docker login
+#         run: |-
+#           echo '${{ steps.auth.outputs.access_token }}' | docker login -u oauth2accesstoken --password-stdin https://gcr.io
+        
+#       - name: Login to GCR
+#         if: github.event_name != 'pull_request'
+#         uses: docker/login-action@v1
+#         with:
+#           registry: ${{ env.REGISTRY }}
+#           username: oauth2accesstoken
+#           password: ${{ steps.auth.outputs.access_token }}
+
       - id: 'auth'
-        if: github.event_name != 'pull_request'
         name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@v0'
         with:
-          token_format: 'access_token'
-          workload_identity_provider: 'projects/97291604265/locations/global/workloadIdentityPools/gh-pool/providers/gh-provider'
-          service_account: 'gh-runner@dapper-flow.iam.gserviceaccount.com'
-          
-      - name: Docker login
-        run: |-
-          echo '${{ steps.auth.outputs.access_token }}' | docker login -u oauth2accesstoken --password-stdin https://gcr.io
+          credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
         
-      - name: Login to GCR
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: oauth2accesstoken
-          password: ${{ steps.auth.outputs.access_token }}
-
-
       # Build docker image
       - name: Build Docker image
         if: github.event_name != 'pull_request'
