--- a/.github/workflows/docker-image-ci.yml
+++ b/.github/workflows/docker-image-ci.yml
@@ -49,7 +49,14 @@ jobs:
         uses: 'google-github-actions/auth@v0'
         with:
           credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
-        
+      
+      - name: Login to GCR
+        uses: docker/login-action@v1
+        with:
+          registry: gcr.io
+          username: _json_key
+          password: ${{ secrets.GOOGLE_CREDENTIALS }}
+
       # Build docker image
       - name: Build Docker image
         if: github.event_name != 'pull_request'
@@ -60,4 +67,5 @@ jobs:
       - name: Push Docker image
         if: github.event_name != 'pull_request'
         id: push-image
-        run: make CONTAINER_REGISTRY='${{ env.CONTAINER_REGISTRY }}' docker-push-flow
+        run: |-
+          make CONTAINER_REGISTRY='${{ env.CONTAINER_REGISTRY }}' docker-push-flow
