--- a/.github/workflows/docker-image-ci.yml
+++ b/.github/workflows/docker-image-ci.yml
@@ -2,10 +2,21 @@ name: Docker Image CI
 
 on:
   push:
-    branches: 
+    tags:
+      - '*'
+    branches:
       - master
-      - 'feature/**' 
-    tags: [ 'v*.*.*' ]
+      - 'auto-cadence-upgrade/**'
+      - staging
+      - trying
+      - 'feature/**'
+      - 'v[0-9]+.[0-9]+'
+  pull_request:
+    branches:
+      - master
+      - 'auto-cadence-upgrade/**'
+      - 'feature/**'
+      - 'v[0-9]+.[0-9]+'
 
 env:
   CONTAINER_REGISTRY: gcr.io/dapper-flow
