Use container name to invoke gRPC endpoint

--- a/saac/Dockerfile
+++ b/saac/Dockerfile
@@ -5,12 +5,12 @@ WORKDIR /app
 # Copy dependencies first to improve caching.
 COPY go.mod .
 COPY go.sum .
-
+RUN go mod download
 COPY saac/ . 
 
 RUN go build -o saac
 
 
 FROM alpine:latest
-CMD ["/saac"]
+CMD ["/saac", "--access-address", "localnet_access_2_1:9000"]
 COPY --from=builder /app/saac /saac
