--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ language/tools/vscode-extension/out/*
 read-badger
 read-protocol-state
 remove-execution-fork
+
+# Generated key in localnet
+integration/localnet/observer-network-key
