--- a/.github/workflows/observer-e2e.yml
+++ b/.github/workflows/observer-e2e.yml
@@ -87,6 +87,8 @@ jobs:
       run: bash -c 'cd integration/localnet/ && make -e OBSERVER=1 init && make start'
     - name: Wait 20 seconds to start
       run: sleep 20
+    - name: Ensure Observer is running unstaked
+      run: docker logs localnet_access_3_1 2>&1 | grep '"unstaked network"'
     - name: Get Latest Blocks from Access
       run: /tmp/flow -f integration/localnet/flow-localnet.json -n access blocks get latest && /tmp/flow -f integration/localnet/flow-localnet.json -n observer blocks get latest
     - name: Get Latest Blocks from Observer
