--- a/.github/workflows/observer-e2e.yml
+++ b/.github/workflows/observer-e2e.yml
@@ -90,13 +90,13 @@ jobs:
     - name: Ensure Observer is running unstaked
       run: docker logs localnet_observer_1_1 2>&1 | grep '"unstaked network"'
     - name: Get Latest Blocks from Access
-      run: /tmp/flow -f integration/localnet/flow-localnet.json -n access blocks get latest && /tmp/flow -f integration/localnet/flow-localnet.json -n observer blocks get latest || true
+      run: /tmp/flow -f integration/localnet/flow-localnet.json -n access blocks get latest && /tmp/flow -f integration/localnet/flow-localnet.json -n observer blocks get latest
     - name: Get Latest Blocks from Observer
-      run: /tmp/flow -f integration/localnet/flow-localnet.json -n observer blocks get latest || true
+      run: /tmp/flow -f integration/localnet/flow-localnet.json -n observer blocks get latest
     - name: Get Version
       run: /tmp/flow -f integration/localnet/flow-localnet.json -n observer version
     - name: Get Status
-      run: /tmp/flow -f integration/localnet/flow-localnet.json -n observer status || true
+      run: /tmp/flow -f integration/localnet/flow-localnet.json -n observer status
     - name: Stop localnet
       run: bash -c 'cd integration/localnet/ && make stop'
     - name: Run tests (Bors)
