--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -138,8 +138,11 @@ jobs:
       run: ~/.local/bin/flow -f integration/localnet/flow-localnet.json -n observer version
     - name: Get Status ensuring the official client build can connect
       run: ~/.local/bin/flow -f integration/localnet/flow-localnet.json -n observer status
+
     - name: Wait for finalized blocks and check them with Access
       # Any future changes will test a proper gRPC API on bot Access and Observer.
       run: ~/.local/bin/flow -f integration/localnet/flow-localnet.json -n access blocks get latest
+    - name: Wait for finalized blocks and check them with Observer
+      run: sleep 5 && ~/.local/bin/flow -f integration/localnet/flow-localnet.json -n access blocks get latest && ~/.local/bin/flow -f integration/localnet/flow-localnet.json -n observer blocks get latest
     - name: Stop localnet
       run: bash -c 'cd integration/localnet/ && make stop'
