--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -144,5 +144,7 @@ jobs:
       run: ~/.local/bin/flow -f integration/localnet/flow-localnet.json -n observer status -o json | grep '"status":"ONLINE"'
     - name: Wait for finalized blocks and check them with Access
       run: ~/.local/bin/flow -f integration/localnet/flow-localnet.json -n observer blocks get latest
+    - name: Wait for finalized blocks and check them with Observer
+      run: sleep 5 && ~/.local/bin/flow -f integration/localnet/flow-localnet.json -n access blocks get latest && ~/.local/bin/flow -f integration/localnet/flow-localnet.json -n observer blocks get latest
     - name: Stop localnet
       run: bash -c 'cd integration/localnet/ && make stop'
