--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,3 +114,39 @@ jobs:
         timeout_minutes: 15
         max_attempts: 2
         command: ./tools/test_monitor/run-tests.sh
+  flow-legacy-client-compatibility-test:
+    name: Client Compatibility Tests With Observer
+    strategy:
+      fail-fast: false
+      matrix:
+        go-version:
+          - 1.16
+          - 1.17
+    runs-on: ubuntu-latest
+    steps:
+    - name: Setup Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: ${{ matrix.go-version}}
+    - name: Checkout repo
+      uses: actions/checkout@v2
+    - name: Build relic
+      run: make crypto_setup_gopath
+    - name: Docker build
+      run: make install-tools
+    - name: Install Flow Client
+      run: sh -ci "$(curl -fsSL https://storage.googleapis.com/flow-cli/install.sh)" && mv ~/.local/bin/flow /tmp
+    - name: Set up Localnet
+      run: bash -c 'cd integration/localnet/ && make -e OBSERVER=1 init && make start'
+    - name: Ensure Observer is started
+      run: docker ps -q -f name=localnet_observer_1_1
+    - name: Ensure Observer is running unstaked
+      run: docker logs localnet_observer_1_1 2>&1 | grep '"unstaked network"'
+    - name: Wait for finalized blocks and check them with Observer
+      run: /tmp/flow -f integration/localnet/flow-localnet.json -n access blocks get latest && /tmp/flow -f integration/localnet/flow-localnet.json -n observer blocks get latest
+    - name: Get Version ensuring the official client build can connect
+      run: /tmp/flow -f integration/localnet/flow-localnet.json -n observer version
+    - name: Get Status ensuring the official client build can connect
+      run: /tmp/flow -f integration/localnet/flow-localnet.json -n observer status
+    - name: Stop localnet
+      run: bash -c 'cd integration/localnet/ && make stop'
