--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,9 +36,11 @@ jobs:
       with:
         # Required: the version of golangci-lint is required and must be specified without patch version: we always use the latest patch version.
         version: v1.45
-        args: -v --build-tags relic
+        args: -v --build-tags relic --config ./.golangci.yml
         # https://github.com/golangci/golangci-lint-action/issues/244
         skip-pkg-cache: true
+        # Make sure we get accurate results
+        # Some of these may be needed if observer code is integrated: only-new-issues: true, skip-build-cache: true
     - name: Run ShellCheck
       uses: ludeeus/action-shellcheck@master
       with:
@@ -110,3 +112,37 @@ jobs:
         timeout_minutes: 15
         max_attempts: 2
         command: ./tools/test_monitor/run-tests.sh
+  localnet-test:
+    name: Localnet Compatibility Tests With Flow-CLI Client and Observer
+    strategy:
+      fail-fast: false
+    runs-on: ubuntu-latest
+    steps:
+    - name: Setup Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: ${{ env.GO_VERSION }}
+    - name: Checkout repo
+      uses: actions/checkout@v2
+    - name: Build relic and other tools
+      run: make install-tools
+    - name: Install Flow Client
+      run: sh -ci "$(curl -fsSL https://storage.googleapis.com/flow-cli/install.sh)"
+    - name: Set up Localnet
+      run: bash -c 'cd integration/localnet/ && make -e OBSERVER=1 init && make start'
+    - name: Ensure Observer is started
+      run: docker ps -f name=localnet_observer_1_1 | grep localnet_observer
+    - name: Get Client Version ensuring the client is provisioned
+      run: ~/.local/bin/flow -f integration/localnet/flow-localnet.json -n observer version
+    - name: Wait for a default waiting period until a clean state
+      # This will not cause flakiness.
+      # The waiting time is a reasonable time to expect an observer to be responsive
+      run: sleep 10
+    - name: Get Status ensuring the observer endpoint is online
+      run: ~/.local/bin/flow -f integration/localnet/flow-localnet.json -n observer status -o json | grep '"status":"ONLINE"'
+    - name: Wait for finalized blocks and check them
+      run: ~/.local/bin/flow -f integration/localnet/flow-localnet.json -n observer blocks get latest
+    - name: Wait for finalized blocks and check them with Observer
+      run: sleep 5 && ~/.local/bin/flow -f integration/localnet/flow-localnet.json -n access blocks get latest && ~/.local/bin/flow -f integration/localnet/flow-localnet.json -n observer blocks get latest
+    - name: Stop localnet
+      run: bash -c 'cd integration/localnet/ && make stop'
