--- a/.golangci.yml
+++ b/.golangci.yml
@@ -30,6 +30,13 @@ issues:
         - unused
     # typecheck currently not handling the way we do function inheritance well
     # disabling for now
-    - path: 'cmd/access/node_build/*' 
+    - path: 'cmd/access/node_builder/*'
+      linters:
+        - typecheck 
+    - path: 'cmd/observer/node_builder/*'
       linters:
         - typecheck
+    - path: 'follower/*'
+      linters:
+        - typecheck
+
