--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -127,23 +127,23 @@ jobs:
     - name: Build relic and other tools
       run: make install-tools
     - name: Install Flow Client
-      run: curl -L https://github.com/onflow/flow-cli/archive/refs/tags/v0.34.0.tar.gz | tar -xzv && cd flow-cli-0.34.0 && make && mkdir -p ~/.local/bin && cp ./cmd/flow/flow ~/.local/bin
+      run: curl -L https://github.com/onflow/flow-cli/archive/refs/tags/v0.34.0.tar.gz | tar -xzv && cd flow-cli-0.34.0 && make && ./cmd/flow/flow version
       # run: sh -ci "$(curl -fsSL https://storage.googleapis.com/flow-cli/install.sh)"
     - name: Set up Localnet
       run: bash -c 'cd integration/localnet/ && make -e OBSERVER=1 init && make start'
     - name: Ensure Observer is started
       run: docker ps -f name=localnet_observer_1_1 | grep localnet_observer
     - name: Get Client Version ensuring the client is provisioned
-      run: ~/.local/bin/flow -f integration/localnet/flow-localnet.json -n observer version
+      run: ./flow-cli-0.34.0/cmd/flow/flow -f integration/localnet/flow-localnet.json -n observer version
     - name: Wait for a default waiting period until a clean state
       # This will not cause flakiness.
       # The waiting time is a reasonable time to expect an observer to be responsive
       run: sleep 20
     - name: Get Status ensuring the observer endpoint is online
-      run: ~/.local/bin/flow -f integration/localnet/flow-localnet.json -n observer status -o json | grep '"status":"ONLINE"'
+      run: ./flow-cli-0.34.0/cmd/flow/flow -f integration/localnet/flow-localnet.json -n observer status -o json | grep '"status":"ONLINE"'
     - name: Wait for finalized blocks and check them
-      run: ~/.local/bin/flow -f integration/localnet/flow-localnet.json -n observer blocks get latest
+      run: ./flow-cli-0.34.0/cmd/flow/flow -f integration/localnet/flow-localnet.json -n observer blocks get latest
     - name: Wait for finalized blocks and check them with Observer
-      run: sleep 5 && ~/.local/bin/flow -f integration/localnet/flow-localnet.json -n access blocks get latest && ~/.local/bin/flow -f integration/localnet/flow-localnet.json -n observer blocks get latest
+      run: sleep 5 && ./flow-cli-0.34.0/cmd/flow/flow -f integration/localnet/flow-localnet.json -n access blocks get latest && ~/.local/bin/flow -f integration/localnet/flow-localnet.json -n observer blocks get latest
     - name: Stop localnet
       run: bash -c 'cd integration/localnet/ && make stop'
