Add observer integration tests (POC) Author: Miklos Szegedi

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,6 +89,7 @@ jobs:
           - integration-consensus
           - integration-execution
           - integration-verification
+          - integration-observer
     env:
       TEST_CATEGORY: ${{ matrix.test-category }}
     runs-on: ubuntu-latest
