--- a/.github/workflows/flaky-test-monitor-integration.yml
+++ b/.github/workflows/flaky-test-monitor-integration.yml
@@ -34,6 +34,7 @@ jobs:
           - integration-consensus
           - integration-execution
           - integration-verification
+          - integration-observer
     env:
       TEST_CATEGORY: ${{ matrix.test-category }}
       COMMIT_SHA: ${{ github.sha }}
