--- a/.github/workflows/skipped-test-tracker.yml
+++ b/.github/workflows/skipped-test-tracker.yml
@@ -30,6 +30,7 @@ jobs:
           - integration-consensus
           - integration-execution
           - integration-verification
+          - integration-observer
     env:
       TEST_CATEGORY: ${{ matrix.test-category }}
       COMMIT_SHA: ${{ github.sha }}
